--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
   - docker
@@ -6,7 +7,7 @@ before_install:
   - docker build -t tharindunisal/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true tharindunisal/react-test npm run test -- --coverage
+  - docker run -e CI=true tharindunisal/react-test npm test
 
 after_success:
   - docker build -t tharindunisal/multi-client ./client
